--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_analytics_web: ^0.5.5+12
+  web: ^1.1.1
 
 dev_dependencies:
   flutter_test:
