--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,19 +30,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core:
-  firebase_auth:
-  cloud_firestore:
+  firebase_core: ^3.0.0
+  firebase_auth: ^5.0.0
+  cloud_firestore: ^5.0.0
 
-  firebase_analytics:
-  firebase_performance: ^0.9.3+8
+  firebase_analytics: ^11.0.0
+  firebase_performance: ^0.10.0
 
-  intl:
-  flutter_inappwebview:
-  multi_select_flutter:
-  url_launcher:
-  admanager_web:
-
+  intl: ^0.19.0
+  flutter_inappwebview: ^6.0.0
+  multi_select_flutter: ^4.1.3
+  url_launcher: ^6.2.5
+  admanager_web: ^0.0.5
   
 
 
@@ -62,7 +61,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
